@@ -1,3 +1,12 @@
+2008-06-14  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* include/openbabel/atom.h, src/atom.cpp: Add OBAtom::Duplcate()
+	which will copy everything except the internal index.
+
+	* include/openbabel/generic.h, src/generic.cpp: Add
+	OBUnitCell::FillUnitCell() method to create space-group-defined
+	atoms. Uses OBAtom::Duplicate.
+
 2008-06-13  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* include/openbabel/forcefield.cpp: Change GetGradient(..., int terms
